# toon-vs-zon-study

./: .gitignore  README.md  plan.md  pyproject.toml
optimization_benefits/: .env.example  README.md  __init__.py  run_benchmark.sh
optimization_benefits/adapters/: __init__.py  combined_adapter.py  json_adapter.py  serializers.py  zon_adapter.py
optimization_benefits/analyze/: __init__.py  analyze.py  economics.py  latency.py  scale.py  study_constants.py
optimization_benefits/api/: api.py
optimization_benefits/cli/: __init__.py  api.py  compare.py  db.py
optimization_benefits/cli/execution/: __init__.py  api_main.py  comparative_main.py  db_main.py
optimization_benefits/database/: __init__.py  store.py
optimization_benefits/demo/: README.md  api_demo.py  comparative_demo.py  db_demo.py
optimization_benefits/docs/: REPRODUCIBILITY.md  analysis.md  cost_savings.md  hypothesis.md  paper.md
optimization_benefits/docs/new_formats/: toon.md  zon.md
optimization_benefits/docs/results/: api_results.txt  comparative_results.txt  db_results.txt  single_file_analysis.txt
optimization_benefits/reference_implementation/: README.md  adapter.py
optimization_benefits/strategies/: __init__.py  baml_strategy.py  base.py  combined_strategy.py  json_strategy.py  strict_strategies.py  toon_strategy.py  zon_strategy.py
optimization_benefits/test/: __init__.py  mock_metrics.py  test_implementation.py
